test/parser/programs/valid/funcDecl3.guav
z = 0
computeSomething (x, y) {
   z = x + y
}
computeSomething(1, 2)