test/parser/programs/invalid/funcDecl3.guav
z = 0
computeSomething (x, y) {
   z = x + y
   return x
   return z
}
